    [Feature #11358]

* IO

  * new mode flag File::SHARE_DELETE is available.
    this flag means to permit deleting opened file on Windows, but currently
    this affect only files opened as binary.  [Feature #11218]

  * new option parameter `flags' is added.
    this parameter is bitwise-ORed to oflags generated by normal mode argument.
    [Feature #11253]

* Thread
  * Thread#name, Thread#name= are added to handle thread names [Feature #11251]

* NameError
  * NameError#receiver is added to take the receiver object. [Feature #10881]

=== Core classes compatibility issues (excluding feature bug fixes)

* Array
  * Array#select!, Array#keep_if, Array#reject!, and Array#delete_if
    no longer changes the receiver array instantly every time the
    block is called.  [Feature #10714]

  * Array#flatten and Array#flatten! no longer try to call #to_ary
    method on elements beyond the given level.  [Bug #10748]

* Enumerable
  * Enumerable#chunk and Enumerable#slice_before no longer takes the
    initial_state argument.  [Feature #10958]
    Use a local variable instead to maintain a state.

* File::Stat
  * On Windows File::Stat#ino always returned 0, but now returns
    BY_HANDLE_FILE_INFORMATION.nFileIndexHigh/Low.

* IO
  * IO#close doesn't raise when the IO object is closed.  [Feature #10718]

* Module
  * Module#define_method and Object.define_singleton_method now
    require method body, Proc, Method, or a block, and raise
    ArgumentError if no block is given directly.  [Bug #11283]

* pack/unpack (Array/String)
  * j and J directives for pointer width integer type.  [Feature #11215]


=== Stdlib updates (outstanding ones only)

* Socket
  * Socket#connect_nonblock, Socket#accept_nonblock,
    TCPServer#accept_nonblock, UNIXServer#accept_nonblock,
    BasicSocket#recv_nonblock, BasicSocket#recvmsg_nonblock,
    BasicSocket#sendmsg_nonblock all support `exception :false` to return
    :wait_readable or :wait_writable symbols instead of raising