@@ -50,6 +50,8 @@ with all sufficient information, see the ChangeLog file.
     this parameter is bitwise-ORed to oflags generated by normal mode argument.
     [Feature #11253]
 
+  * new mode character 'x' to open files for exclusive access [Feature #11258]
+
 * Thread
   * Thread#name, Thread#name= are added to handle thread names [Feature #11251]
 
